--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>File Upload</h1>
+    <div class="container">
+        <h1>FILE UPLOAD</h1>
     <form action="/files/upload" method="POST" enctype="multipart/form-data">
         <input type="file" name="file" id="file-input">
         <input type="submit" value="Upload">
     </form>
+    </div> 
 </body>
 </html>
